fix: align label and toggle in container

--- a/frontend/src/app/document/entity-toggle/entity-toggle.component.scss
+++ b/frontend/src/app/document/entity-toggle/entity-toggle.component.scss
@@ -3,5 +3,6 @@ button {
     margin-right: 1em;
 }
 em {
-    top: .3em;
+    position: absolute;
+    margin-top: .3em;
 }
